@@ -1,9 +1,9 @@
-#define FILEVER_INCVERSION        0,19,0,216
-#define PRODUCTVER_INCVERSION     0,19,0,216
-#define STRFILEVER_INCVERSION     "0, 19, 0, 216\0"
-#define STRPRODUCTVER_INCVERSION  "0, 19, 0, 216\0"
+#define FILEVER_INCVERSION        0,19,0,217
+#define PRODUCTVER_INCVERSION     0,19,0,217
+#define STRFILEVER_INCVERSION     "0, 19, 0, 217\0"
+#define STRPRODUCTVER_INCVERSION  "0, 19, 0, 217\0"
 #define TSVN_VERMAJOR             0
 #define TSVN_VERMINOR             19
 #define TSVN_VERMICRO             0
-#define TSVN_VERBUILD_INCVERSION  216
+#define TSVN_VERBUILD_INCVERSION  217
 
